Enhance security configuration and transaction handling: Update CORS settings to allow all origins for testing, improve error handling in SecurityConfig, and modify TransactionService to use account numbers instead of IDs. Refactor TransactionDTO to handle null sender and receiver cases. Update application properties for improved error reporting and logging settings.